tests/NormalTests/paczka1/fuzzy1/32326485.err
Error in line 5: A937 A30 22,8
Error in line 14: A937 A937 -1,2
Error in line 7: 7H5w A937 93,2
Error in line 15: b1mLR A646 32,6
Error in line 13: A937 A937 25,6
Error in line 28: PZrgbAROfa A646 85,7
Error in line 26: 7H5w A937 541,1
Error in line 34: A937 A30 16,4
Error in line 37: A937 S300 41,2
